# citegres

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  citegres.ini  citegres_template.ini  conftest.py  guitility.py  netility.py  nordility.py  postility.py  pyproject.toml  seleamility.py
.github/workflows/: ci.yml  secret-scan.yml
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
tests/: test_netility.py
